--- a/src/Components/ProductDetail/ProductDetail.css
+++ b/src/Components/ProductDetail/ProductDetail.css
@@ -111,13 +111,13 @@
     align-items: center;
     width: 180px;
     height: 50px;
-    padding: 15px;
     border-radius: 10px;
     background-color: var(--Light-grayish-blue);
     font-weight: bold;
 }
 
 .product-detail .product-info .quantity-cart-wrapper .quantity-section button {
+    padding: 30px 20px;
     border: none;
     cursor: pointer;
     background: none;
@@ -224,7 +224,7 @@
         align-items: center;
         border-radius: 50%;
         cursor: pointer;
-
+        z-index: 2;
     }
 
     .product-detail .product-images .bg-wh-r {
